[package]
name = "ruxel"
version = "0.0.0"
authors = [ "Rodrigo Santiago <rsdlt@pm.me>"]
edition = "2021"
rust-version = "1.62.1"
description = "Simple renderer and ray tracer built with Rust"
repository = "https://github.com/rsdlt/ruxel"
homepage = "https://github.com/rsdlt/ruxel"
license="MIT OR Apache-2.0"
readme= "README.md"
keywords = ["ray", "tracer", "render", "renderer", "3D"]
categories=["graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
doctest = false # no testing on docs yet
