# Copyright 2022 Rodrigo Santiago.
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "ruxel"
version = "0.0.1"
authors = [ "Rodrigo Santiago <rsdlt@pm.me>"]
edition = "2021"
rust-version = "1.62.1"
description = "Simple renderer and ray tracer built with Rust"
repository = "https://github.com/rsdlt/ruxel"
homepage = "https://github.com/rsdlt/ruxel"
license="MIT OR Apache-2.0"
readme= "README.md"
keywords = ["ray", "tracer", "render", "renderer", "3D"]
categories=["graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"         # num crate provides 'one' and 'zero' identities, and other generic facilities.
